--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div class="card-body">
                 <h5 class="card-title">High School</h5>
                 <p class="card-text">I completed my high school form Lingeshwar public school which is under the Chhattisgarh Board of Education Raipur.</p>
-                <a href="https://cgbse.nic.in/" class="btn btn-primary">Visit Board</a>
+                <a href="#" class="btn btn-primary">Visit Board</a>
               </div>
             </div>
           </div>
@@ -64,7 +64,7 @@
               <div class="card-body">
                 <h5 class="card-title">Higher Sec. School</h5>
                 <p class="card-text">I completed my higher Secondry School from the same school L.P.S under Chhattisgarh Board of Education.</p>
-                <a href="https://cgbse.nic.in/" class="btn btn-primary">Visit Board</a>
+                <a href="#" class="btn btn-primary">Visit Board</a>
               </div>
             </div>
           </div>
